@@ -9,6 +9,7 @@ import javafx.scene.text.Text;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 import mokki.mokki.gui.alipaneeli.TaulukonData;
+import mokki.mokki.gui.testiluokatTaulukonDatalle.VarauksetWrapper;
 
 import java.util.ArrayList;
 
@@ -35,13 +36,15 @@ public class VarauksenTiedotIkkuna extends Stage {
         if (tyyppi.equals("Varauksen tiedot")) {
             varauksenTiedot();
         }
+        else if(tyyppi.equals("Muuta varauksen tietoja")) {
+            muutaVarauksenTietoja();
+        }
 
         Scene kehys = new Scene(paapaneeli);
         this.initModality(Modality.APPLICATION_MODAL);
         this.setTitle(tyyppi);
         this.setScene(kehys);
     }
-
 
     private void varauksenTiedot() {
         VBox ylapaneeli = new VBox();
@@ -97,6 +100,90 @@ public class VarauksenTiedotIkkuna extends Stage {
         paapaneeli.setBottom(alapaneeli);
     }
 
+    private void muutaVarauksenTietoja() {
+        VBox ylapaneeli = new VBox();
+
+        // Luodaan ruudukkopaneeli
+        GridPane ruudukkopaneeli = new GridPane(40, 40);
+        String[] kenttienArvot = data.palautaKenttienArvot();
+        String[][] maaritykset = data.getMaaritykset();
+        VarauksetWrapper varauksenTiedot = (VarauksetWrapper)data;
+        int sarake = 0;
+        int rivi = 0;
+        for (int i = 0; i < maaritykset.length - 1; i++) {
+            if (i == 3) {
+                sarake = 2;
+                rivi = 0;
+            }
+            if (i == 2) {
+                // Lisätään asiakkaan sähköpostiosoite ja nimi ruudukkopaneeliin
+                Text otsikko1 = new Text("Asiakkaan sähköposti\n(tarkista painamalla Enter):");
+                otsikko1.setStyle("-fx-font-weight:bold;");
+                Text otsikko2 = new Text("Asiakkaan nimi:");
+                otsikko2.setStyle("-fx-font-weight:bold;");
+                TextField tekstikentta1 = new TextField(varauksenTiedot.getAsiakkaanSahkoposti());
+                tekstikentta1.setContextMenu(new ContextMenu());
+                TextField tekstikentta2 = new TextField(varauksenTiedot.getAsiakkaanNimi());
+                tekstikentta2.setContextMenu(new ContextMenu());
+                tekstikentta2.setEditable(false);
+                tekstikentta2.setFocusTraversable(false);
+                tekstikentta2.setBackground(Background.fill(Color.GAINSBORO));
+
+                ruudukkopaneeli.add(otsikko1, sarake, rivi);
+                ruudukkopaneeli.add(tekstikentta1, sarake + 1, rivi);
+                rivi++;
+                ruudukkopaneeli.add(otsikko2, sarake, rivi);
+                ruudukkopaneeli.add(tekstikentta2, sarake + 1, rivi);
+
+                tekstikentta1.setOnAction(e -> {
+                    // TODO: tarkista, löytyykö asiakas tietokannasta sähköpostiosoitteen perusteella,
+                    //  ja päivitä asiakkaan nimi -kenttä
+
+                    String syotettySahkopostiosoite = tekstikentta1.getText().strip();
+                    if (((VarauksetWrapper) data).onkoSahkopostiTietokannassa(syotettySahkopostiosoite)) {
+                        // Etsi asiakkaan nimi ja syötä se tekstikenttään
+                        tekstikentta2.setText("Asiakkaan nimi");
+                    }
+                    else {
+                        tekstikentta2.setText("Asiakasta ei löydy");
+                    }
+                });
+                tekstikenttalista.add(tekstikentta1);
+                tekstikenttalista.add(tekstikentta2);
+            }
+
+            else if (i == 5) {
+                Text otsikko = new Text(maaritykset[i][0] + ":");
+                otsikko.setStyle("-fx-font-weight:bold;");
+                VBox valintanappipaneeli = luoValintanappipaneeli();
+                ruudukkopaneeli.add(otsikko, sarake, rivi);
+                ruudukkopaneeli.add(valintanappipaneeli, sarake + 1, rivi);
+            }
+            else {
+                Text otsikko = new Text(maaritykset[i][0] + ":");
+                otsikko.setStyle("-fx-font-weight:bold;");
+                TextField tekstikentta = new TextField(kenttienArvot[i]);
+                tekstikentta.setContextMenu(new ContextMenu());
+                ruudukkopaneeli.add(otsikko, sarake, rivi);
+                ruudukkopaneeli.add(tekstikentta, sarake + 1, rivi);
+                tekstikenttalista.add(tekstikentta);
+            }
+            rivi++;
+        }
+        // Luodaan tekstialuepaneeli
+        VBox tekstialuepaneeli = luotekstialuepaneeli();
+        // Asetetaan ruudukkopaneeli ja tekstialuepaneeli yläpaneeliin
+        ylapaneeli.getChildren().addAll(ruudukkopaneeli, tekstialuepaneeli);
+
+        VBox alapaneeli = new VBox();
+        // Luodaan painikepaneeli ja asetetaan se alapaneeliin
+        alapaneeli.getChildren().add(luoPainikepaneeli());
+
+        paapaneeli.setTop(ylapaneeli);
+        paapaneeli.setBottom(alapaneeli);
+
+    }
+
     private VBox luotekstialuepaneeli() {
         String[] kenttienArvot = data.palautaKenttienArvot();
         String[][] maaritykset = data.getMaaritykset();
@@ -136,37 +223,53 @@ public class VarauksenTiedotIkkuna extends Stage {
                 this.close();
             });
         }
-        else if (tyyppi.equals("Muuta asiakkaan tietoja") || tyyppi.equals("Lisää asiakas")) {
+        else if (tyyppi.equals("Muuta varauksen tietoja")) {
             Button hyvaksyPainike = new Button("Muuta tiedot");
             Button peruutaPainike = new Button("Peruuta");
-            if (tyyppi.equals("Lisää asiakas")) {
-                hyvaksyPainike.setText("Lisää asiakas");
-            }
             hyvaksyPainike.setMinWidth(100);
             peruutaPainike.setMinWidth(100);
             painikepaneeli.getChildren().addAll(hyvaksyPainike, peruutaPainike);
 
             hyvaksyPainike.setOnAction(e -> {
-                int tunnisteenIndeksi = data.palautaTunnisteenIndeksi();
-                boolean arvotHyvaksyttavia = data.ovatkoArvotHyvaksyttavia(palautaKenttienTiedot());
-                boolean tunnisteUniikki = data.onkoTunnisteUniikki(
-                        tekstikenttalista.get(tunnisteenIndeksi).getText());
-                if (arvotHyvaksyttavia && tunnisteUniikki) {
+                // TODO: tarkista, että tietojen tarkistukselle löytyy toimivat metodit
+                //  ja tarkistuken logiikka toimii oikein.
+
+                VarauksetWrapper data = (VarauksetWrapper)this.data;
+                boolean[] tulokset = data.mitkaArvotHyvaksyttavia(palautaKenttienTiedot());
+                if (!tulokset[data.palautaTunnisteenIndeksi()]) {
+                    String otsikko = "Tunnistevirhe";
+                    String virheteksti = "";
+                    // Tarkistetaan, että varauksen tunnus on hyväksyttävä.
+                    if (!data.onkoTunnisteUniikki(tekstikenttalista.getFirst().getText())) {
+                        virheteksti = "Tunnukselle " + tekstikenttalista.getFirst().getText() +
+                                " on jo luotu varaus. Valtse toinen tunnus.";
+                    }
+                    else {
+                        virheteksti = "Tunnus ei ole muodoltaa hyväksyttävä. Tarkista, että tunnus " +
+                                "noudattaa tunnisteiden muotoiluvaatimuksia.";
+                    }
+                    Virheikkuna virheikkuna = new Virheikkuna(otsikko, virheteksti);
+                    virheikkuna.show();
+                }
+                // Tarkistetaan, että asiakkaan sähköpostiosoite löytyy tietokannasta.
+                else if(!data.onkoSahkopostiTietokannassa(tekstikenttalista.get(2).getText())) {
+                    String otsikko = "Sähköpostiosoitevirhe";
+                    String virheteksti = "Asiakasta ei löydy tietokannasta sähköpostiosoitteella "
+                            + tekstikenttalista.get(2).getText() + ". Lisää asiakas ennen varauksen lisäämistä.";
+                    Virheikkuna virheikkuna = new Virheikkuna(otsikko, virheteksti);
+                    virheikkuna.show();
+                }
+                // Tarkistetaan, että kaikkien kenttien arvot ovat hyväksyttäviä.
+                else if(!data.ovatkoArvotHyvaksyttavia(palautaKenttienTiedot())) {
+                    String otsikko = "Tietokenttävirhe";
+                    String virheteksti = muotoileTietokenttavirheteksti();
+                    Virheikkuna virheikkuna = new Virheikkuna(otsikko, virheteksti);
+                    virheikkuna.show();
+                }
+                // Kaikki arvot ovat hyväksyttäviä, joten ikkuna voidaan sulkea.
+                else {
                     tulos = true;
                     this.close();
-                }
-                else if (!arvotHyvaksyttavia) {
-                    Virheikkuna virheikkuna = new Virheikkuna("Tietokenttävirhe",
-                            muotoileTietokenttavirheteksti());
-                    virheikkuna.show();
-                }
-                else {
-                    String virheteksti = data.getMaaritykset()[tunnisteenIndeksi][0] + " " +
-                            tekstikenttalista.get(tunnisteenIndeksi).getText() +
-                            " löytyy jo tietokannasta. Valitse jokin toinen arvo.";
-                    Virheikkuna virheikkuna = new Virheikkuna("Tunnistevirhe",
-                            virheteksti);
-                    virheikkuna.show();
                 }
             });
             peruutaPainike.setOnAction(e -> {
@@ -178,27 +281,30 @@ public class VarauksenTiedotIkkuna extends Stage {
         return painikepaneeli;
     }
 
+    private VBox luoValintanappipaneeli() {
+        VBox valintanappipaneeli = new VBox(10);
+        valintanapit = new ToggleGroup();
+        RadioButton valintanappi1 = new RadioButton("Aktiivinen");
+        RadioButton valintanappi2 = new RadioButton("Päättynyt");
+        RadioButton valintanappi3 = new RadioButton("Peruttu");
+        valintanappi1.setToggleGroup(valintanapit);
+        valintanappi2.setToggleGroup(valintanapit);
+        valintanappi3.setToggleGroup(valintanapit);
 
-    /**
-     * Metodi asettaa valintanappien toiminnallisuuden.
-     * @param valintanappi1 valintanappi 1
-     * @param valintanappi2 valintanappi 2
-     */
-    private void asetaValintanappienToiminnallisuus(RadioButton valintanappi1, RadioButton valintanappi2) {
-        valintanappi1.setOnAction(e -> {
-            TextField tekstikentta = tekstikenttalista.getLast();
-            tekstikentta.setEditable(false);
-            tekstikentta.setFocusTraversable(false);
-            tekstikentta.setStyle("");
-            tekstikentta.setBackground(Background.fill(Color.GAINSBORO));
-        });
-        valintanappi2.setOnAction(e -> {
-            TextField tekstikentta = tekstikenttalista.getLast();
-            tekstikentta.setEditable(true);
-            tekstikentta.setFocusTraversable(true);
-            tekstikentta.setStyle("-fx-control-inner-background:#" +
-                    Color.WHITE.toString().substring(2));
-        });
+        String varauksenTila = data.palautaKenttienArvot()[5];
+        if (varauksenTila.equals("Aktiivinen")) {
+            valintanappi1.setSelected(true);
+        }
+        else if (varauksenTila.equals("Päättynyt")) {
+            valintanappi2.setSelected(true);
+        }
+        else if(varauksenTila.equals("Peruttu")) {
+            valintanappi3.setSelected(true);
+        }
+
+        valintanappipaneeli.getChildren().addAll(valintanappi1, valintanappi2, valintanappi3);
+
+        return valintanappipaneeli;
     }
 
     /**
@@ -255,24 +361,27 @@ public class VarauksenTiedotIkkuna extends Stage {
      * @return tekstikenttien tiedot
      */
     public String[] palautaKenttienTiedot() {
-        String[] tiedot = new String[] {""};
-        if (tyyppi.equals("Asiakkaan tiedot")) {
-            tiedot = new String[] {tekstikenttalista.get(0).getText(), tekstikenttalista.get(1).getText(),
-                    tekstikenttalista.get(2).getText(), tekstikenttalista.get(3).getText(),
-                    tekstikenttalista.get(4).getText()};
+        String[] tiedot = new String[7];
+        if (tyyppi.equals("Varauksen tiedot")) {
+            tiedot = new String[] {
+                    tekstikenttalista.get(0).getText().strip(),
+                    tekstikenttalista.get(1).getText().strip(),
+                    tekstialuelista.get(0).getText().strip(),
+                    tekstikenttalista.get(2).getText().strip(),
+                    tekstikenttalista.get(3).getText().strip(),
+                    tekstikenttalista.get(4).getText().strip(),
+                    tekstialuelista.get(1).getText().strip()};
         }
-        else if (tyyppi.equals("Muuta asiakkaan tietoja") || tyyppi.equals("Lisää asiakas")) {
-            String ytunnus;
-            if (valintanapit.getToggles().getFirst().isSelected()) {
-                ytunnus = tekstikenttalista.get(3).getText();
-            }
-            else {
-                ytunnus = "";
-            }
+        else if (tyyppi.equals("Muuta varauksen tietoja")) {
             RadioButton valittuNappi = (RadioButton)valintanapit.getSelectedToggle();
-            String asiakastyyppi = valittuNappi.getText().toLowerCase();
-            tiedot = new String[] {tekstikenttalista.get(0).getText(), tekstikenttalista.get(1).getText(),
-                    tekstikenttalista.get(2).getText(), asiakastyyppi, ytunnus};
+            tiedot = new String[] {
+                    tekstikenttalista.get(0).getText().strip(),
+                    tekstikenttalista.get(1).getText().strip(),
+                    tekstikenttalista.get(3).getText().strip() + " (" + tekstikenttalista.get(2).getText().strip() + ")",
+                    tekstikenttalista.get(4).getText().strip(),
+                    tekstikenttalista.get(5).getText().strip(),
+                    valittuNappi.getText().strip(),
+                    tekstialuelista.getFirst().getText().strip()};
         }
 
         return tiedot;
